# apac-technical-test-fall-2023

./: .env.local  README.md  pyproject.toml
apac_coe_technical_test_fall_2023/: logger.py  settings.py
apac_coe_technical_test_fall_2023/api/: main.py  pagination.py
apac_coe_technical_test_fall_2023/api/routes/: comission.py  commission.py  login.py  order.py  trade.py
apac_coe_technical_test_fall_2023/app/: main.py  user.py
apac_coe_technical_test_fall_2023/app/pages/: commission_blotter.py  home.py  login.py  logout.py  order_blotter.py  trade_blotter.py
apac_coe_technical_test_fall_2023/database/: connection.py
apac_coe_technical_test_fall_2023/jwt/: auth.py
apac_coe_technical_test_fall_2023/model/: mysql.py
tests/: test_jwt.py
tests/apis/: test_database_connection.py  test_get_order.py  test_get_trade.py  test_login.py
